# coach

./: .editorconfig  .gitignore  CLAUDE.md  GOALS.md  PROMPT.md  README.md  TODO.md  TRAINING_GOALS.md  app.py  prompt_history.md  pyproject.toml  schema.sql  strava_oauth.py  sync_strava.py
backend/: conftest.py  pyproject.toml
backend/accounts/: api.py  tests.py
backend/config/: api.py  settings.py  urls.py
backend/lifting/: admin.py  api.py  apps.py  models.py  tests.py
backend/lifting/management/commands/: migrate_from_training_db.py
backend/lifting/migrations/: 0001_initial.py  0002_add_sets_field.py  0003_migrate_to_sets.py  0004_remove_old_fields.py  0005_add_exercise_position.py
deploy/: .env.example  DEPLOY.md  GCLOUD.md  coach-gcp.service  coach.service  deploy-gcp.sh  deploy.sh  nginx-coach-initial.conf  nginx-coach.conf  setup.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/components/: AppHeader.spec.ts  AppHeader.vue  PwaUpdatePrompt.vue  RestTimer.vue  SessionCalendar.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.spec.ts  auth.ts
frontend/src/styles/: main.scss
frontend/src/types/: lifting.ts
frontend/src/views/: ChangelogView.vue  CreateSessionView.vue  HomeView.vue  LoginView.vue  (+4 more)
templates/: base.html  edit_lifting.html  index.html  log_lifting.html  planned_lifting_detail.html  running_stats.html  view_lifting.html  view_lifting_detail.html  weekly_plan.html  weekly_running_plan.html
(+9 files in other folders)
